--- a/templates/home/tribunales_receptor.html
+++ b/templates/home/tribunales_receptor.html
@@ -51,67 +51,45 @@
 {%endblock%}
 {%block scripts%}
 <script>
-	var sacar_op_j = function (){
-        $("select#id_jurisdiccion").focus(function() {
-        $(this).find("option").eq(0).remove();
-        sacar_op_j = function(){};
-        });
-    }
+$(document).ready(function(){
+		var sinop = "<option value='-1' selected disabled>Jurisdicción</option>";
+		var options_j = $("select#id_jurisdiccion").html();
+		options = sinop + options_j;
+		$("select#id_jurisdiccion").html(options);
 
-    var sacar_op_t = function(){
-        $("select#id_tribunal").focus(function() {
-            if($("select#id_jurisdiccion").val()){
-                $(this).find("option").eq(0).remove();
-            }
-        sacar_op_t = function(){};
-        });
-    };
+		var sinop = "<option value='-1' selected disabled>Tribunal</option>";
+		var options_t = $("select#id_tribunal").html();
+		options = sinop + options_t;
+		$("select#id_tribunal").html(options);
 
-    $(document).ready(function(){
+		var username = "{{username}}"
+		var url = "/receptor/tribunales/tabla";
+		$("#div_table_tribunales").load(url);
 
-    var sinop = "<option value='-1' selected disabled>Jurisdicción</option>";
-    var options_j = $("select#id_jurisdiccion").html();
-    options = sinop + options_j;
-    $("select#id_jurisdiccion").html(options);
+		$("select#id_jurisdiccion").change(function(event){
+			if ($(this).val() == 0){
+				$("select#id_tribunal").attr('disabled',true);
+				return;
+			}
+			else{
+				var url = "/jurisdiccion/" + $(this).val() + "/tribunales/";
+				$("select#id_tribunal").load(url);
+				// var options_t = $("select#id_tribunal").html();
+				// var sinop1 = "<option value='-2'>Todos</option>";
+				// options_t = sinop1 + options_t;
+				// $("select#id_tribunal").html(options_t);
+				$("select#id_tribunal option:first").attr('selected', 'selected');
+				$("select#id_tribunal").attr('disabled',false);
 
-    sacar_op_j();
+			}
+		});
 
+		$("form").submit(function(event){
+			var username = "{{user.username}}";
+			var url = "/receptor/"+username+"/tribunales/";
+			$("#div_table_tribunales").load(url);
+		});
 
-    var sinop = "<option value='-1' selected disabled>Tribunal</option>";
-    var options_t = $("select#id_tribunal").html();
-    options = sinop + options_t;
-    $("select#id_tribunal").html(options);
-
-    sacar_op_t();
-
-    var username = "{{username}}"
-    var url = "/receptor/tribunales/tabla";
-    $("#div_table_tribunales").load(url);
-
-    $("select#id_jurisdiccion").change(function(event){
-        if ($(this).val() == 0){
-            $("select#id_tribunal").attr('disabled',true);
-            return;
-        }
-        else{
-            var url = "/jurisdiccion/" + $(this).val() + "/tribunales/";
-            $("select#id_tribunal").load(url);
-            var options_t = $("select#id_tribunal").html();
-            var sinop1 = "<option value='-2'>Todos</option>";
-            options_t = sinop1 + options_t;
-            $("select#id_tribunal").html(options_t);
-            $("select#id_tribunal option:first").attr('selected', 'selected');
-            $("select#id_tribunal").attr('disabled',false);
-
-        }
-    });
-
-    $("form").submit(function(event){
-        var username = "{{user.username}}";
-        var url = "/receptor/"+username+"/tribunales/";
-        $("#div_table_tribunales").load(url);
-    });
-
-    });
+	});
 </script>
 {%endblock%}
