--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,12 +1,13 @@
-{% extends "base.html" %}
+{% extends "base_nonav.html" %}
 
 {% block title %}Recuperar Contrase&ntilde; Completa | SIJ{% endblock title %}
 
 {% block content %}
 <div class="row">
-	<div class="col-sm-6 col-sm-offset-3">
-		<div class="jumbotron">
-			<h2 class="text-center">Contrase&ntilde;a Actualizada</h2>
+	<div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
+		<img src="/media/images/logo-SIJ.png" alt="" style="width: 70%; margin-left:15%; margin-bottom: 30px;" >
+		<div class="row">
+			<h3 class="text-center">Contrase&ntilde;a Actualizada</h3>
 			<p class="text-justify">
 				<small>Su nueva contrase&ntilde;a se ha registrado con &eacute;xito.</small>
 			</p>
@@ -14,4 +15,4 @@
 		</div>
 	</div>
 </div>
-{% endblock content %}  
+{% endblock%}  
