--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,12 +1,13 @@
-{% extends "base.html" %}
-
-{% block title %}Recuperar Contrase&ntilde;a | SIJ{% endblock title %}
+{% extends "base_nonav.html" %}
+{%load bootstrap3 %}
+{% block title %}Recuperar Contrase&ntilde;a | SIJ{% endblock%}
 
 {% block content %}
 <div class="row">
-	<div class="col-md-6 col-md-offset-3">
-		<div class="jumbotron">
-			<h2 class="text-center">Recuperar Contrase&ntilde;a</h2>
+	<div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
+		<img src="/media/images/logo-SIJ.png" alt="" style="width: 70%; margin-left:15%; margin-bottom: 30px;" >
+		<div class="row">
+			<h3 class="text-center">Recuperar Contrase&ntilde;a</h3>
 			<p class="text-justify">
 				<small>En breve recibir&aacute; un correo electr&oacute;nico con las instrucciones para reestablecer su contrase&ntilde;a.</small>
 			</p>
@@ -14,4 +15,4 @@
 		</div>
 	</div>
 </div>
-{% endblock content %}   
+{% endblock%}   
