--- a/templates/causas/detalle.html
+++ b/templates/causas/detalle.html
@@ -34,10 +34,60 @@
 					{{causa.observacion| default:"Sin observaciones"}}
 				</div>
 			</div>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-12 col-xs-12 col-md-12">
+			{%if user.usuario.tipo == 1 and causa.estado == "pendiente"%}
+				<h3>Datos de Pago</h3>
+				<form action="/causa/aceptar/" class="form-horizontal" id="formpago" method="POST">
+					{% csrf_token %}
+					{{form.idcausa}}
+					<div class="form-group">
+						<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
+							{{form.valor}}
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
+							{{form.rut}}
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
+							{{form.cuenta}}
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
+							{{form.banco}}
+						</div>
+					</div>
+				</form>
+			{%endif%}
+			{%if causa.estado == 'confirmacion'%}
+				<h3>Datos de Pago</h3>
+					<form action="/causa/aceptar/" class="form-horizontal" id="formpago" method="POST">
+						{% csrf_token %}
+						{{form.idcausa}}
+					</form>
+					<div class="form-group">
+						<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
+							{{causa.valor}}
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
+							{{causa.receptor.rut}}
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
+							{{causa.receptor.cuenta}}
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
+							{{causa.receptor.banco}}
+						</div>
+					</div>
+			{%endif%}
 			<div class="panel-group" id="accordion">
 			  <div class="panel panel-default">
 			    <div class="panel-heading">
@@ -49,181 +99,110 @@
 			    </div>
 			    <div id="collapseInfo" class="panel-collapse collapse">
 			      <div class="panel-body">
-					<form class="form-horizontal" role="form">
-				      	<div class="form-group">
-							<label for="" class="control-label col-md-4 col-sm-4 col-xs-6">Abogado</label>
-							<div class="col-md-8 col-sm-8 col-xs-6">
-								{{causa.abogado.nombre}}
-							</div>
+			      	<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">Abogado</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							{{causa.abogado.nombre}}
 						</div>
-						<div class="form-group">
-							<label for="" class="control-label col-md-4 col-sm-4 col-xs-6">Receptor</label>
-							<div class="col-md-8 col-sm-8 col-xs-6">
-								{{causa.receptor.nombre}}
-							</div>
+					</div>
+					<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">Receptor</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							{{causa.receptor.nombre}}
 						</div>
-						<div class="form-group">
-							<label for="" class="control-label col-md-4 col-sm-4 col-xs-6">Fecha solicitud</label>
-							<div class="col-md-8 col-sm-8 col-xs-6">
-								{{causa.fechaingreso}}
-							</div>
+					</div>
+					<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">Fecha solicitud</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							{{causa.fechaingreso}}
 						</div>
-						<div class="form-group">
-							<label for="" class="control-label col-md-4 col-sm-4 col-xs-6">Estado</label>
-							<div class="col-md-8 col-sm-8 col-xs-6">
-								{{causa.estado}}
-							</div>
+					</div>
+					<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">Estado</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							{{causa.estado}}
 						</div>
-						<div class="form-group">
-							<label for="" class="control-label col-md-4 col-sm-4 col-xs-6">Resultado diligencia</label>
-							<div class="col-md-8 col-sm-8 col-xs-6">
-								{{causa.tiporesultadodiligencia.detallediligencia}}
-							</div>
+					</div>
+					<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">Resultado diligencia</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							{{causa.tiporesultadodiligencia.detallediligencia}}
 						</div>
-						<div class="form-group">
-							<label for="" class="control-label col-md-4 col-sm-4 col-xs-6">D&iacute;as pendientes</label>
-							<div class="col-md-8 col-sm-8 col-xs-6">
-								{% if causa.diaspendiente != None %}
-									{{causa.diaspendiente}}
-								{%else%}
-									-
-								{%endif%}
-							</div>
+					</div>
+					<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">D&iacute;as pendientes</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							{% if causa.diaspendiente != None %}
+								{{causa.diaspendiente}}
+							{%else%}
+								-
+							{%endif%}
 						</div>
-					</form>
+					</div>
 			      </div>
 			    </div>
 			  </div>
 			</div>
+
 			{%if user.usuario.tipo == 2%}
-			<div class="panel-group" id="accordion">
-				<div class="panel panel-default">
-			    	<div class="panel-heading">
-			      		<h4 class="panel-title">
-				        	<a data-toggle="collapse" data-parent="#accordion" href="#collapseInfo">
-				          		Historial Causa
-				        	</a>
-			      		</h4>
-			    	</div>
-			    	<div id="collapseInfo" class="panel-collapse collapse">
-			    		<div class="panel-body">
-					      	<div class="form-group">
-								<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento1</label>
-								<div class="col-md-8 col-sm-8 col-xs-6">
-									<!--Datos-->
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento2</label>
-								<div class="col-md-8 col-sm-8 col-xs-6">
-									<!--Datos-->
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento3</label>
-								<div class="col-md-8 col-sm-8 col-xs-6">
-									<!--Datos-->
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento4</label>
-								<div class="col-md-8 col-sm-8 col-xs-6">
-									<!--Datos-->
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento5</label>
-								<div class="col-md-8 col-sm-8 col-xs-6">
-									<!--Datos-->
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento6</label>
-								<div class="col-md-8 col-sm-8 col-xs-6">
-									<!--Datos-->
-								</div>
-							</div>
-			     		</div>
-			    	</div>
-				</div>
+				<div class="panel-group" id="accordion">
+			  <div class="panel panel-default">
+			    <div class="panel-heading">
+			      <h4 class="panel-title">
+			        <a data-toggle="collapse" data-parent="#accordion" href="#collapseInfo">
+			          Historial Causa
+			        </a>
+			      </h4>
+			    </div>
+			    <div id="collapseInfo" class="panel-collapse collapse">
+			      <div class="panel-body">
+
+			      	<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento1</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							<!--Datos-->
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento2</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							<!--Datos-->
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento3</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							<!--Datos-->
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento4</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							<!--Datos-->
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento5</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							<!--Datos-->
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="" class="col-md-4 col-sm-4 col-xs-6">Evento6</label>
+						<div class="col-md-8 col-sm-8 col-xs-6">
+							<!--Datos-->
+						</div>
+					</div>
+
+			      </div>
+			    </div>
+			  </div>
 			</div>
 			{%endif%}
+
 		</div>
 	</div>
-	<br>
-	<div class="row">
-		<div class="col-md-12 col-sm-12 col-xs-12">
-			{%if user.usuario.tipo == 1 and causa.estado == "pendiente"%}
-			<h3>Datos de Pago</h3>
-			<form action="/causa/aceptar/" class="form-horizontal" id="formpago" method="POST">
-				{% csrf_token %}
-				{{form.idcausa}}
-				<div class="form-group">
-					<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 text-justify">
-						{{form.valor}}
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 text-justify">
-						{{form.rut}}
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 text-justify">
-						{{form.banco}}
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 text-justify">
-						{{form.tipo_cuenta}}
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 text-justify">
-						{{form.cuenta}}
-					</div>
-				</div>
-			</form>
-			{%endif%}
-			{%if causa.estado == 'confirmacion'%}
-			<h3>Datos de Pago</h3>
-			<form action="/causa/aceptar/" class="form-horizontal" id="formpago" method="POST">
-				{% csrf_token %}
-				{{form.idcausa}}
-				<div class="form-group">
-					<label for="" class="control-label col-md-4 col-sm-4 col-xs-6">Precio</label>
-					<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
-						{{causa.valor}}
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="" class="control-label col-md-4 col-sm-4 col-xs-6">RUT</label>
-					<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
-						{{causa.receptor.rut}}
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="" class="control-label col-md-4 col-sm-4 col-xs-6">Banco</label>
-					<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
-						{{causa.receptor.banco}}
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="" class="control-label col-md-4 col-sm-4 col-xs-6">Tipo de Cuenta</label>
-					<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
-						{{causa.receptor.tipo_cuenta}}
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="" class="control-label col-md-4 col-sm-4 col-xs-6">N° de Cuenta</label>
-					<div class="col-md-8 col-sm-8 col-xs-6 text-justify">
-						{{causa.receptor.cuenta}}
-					</div>
-				</div>
-			</form>
-			{%endif%}
-		</div>
-	</div>
+
 {%else%}
 	<h3 class="text-center">{{error}}</h3>
 {%endif%}
