--- a/templates/causas/opciones_causa.html
+++ b/templates/causas/opciones_causa.html
@@ -26,21 +26,13 @@
 <button type="button" id="resultados-causa" class="btn btn-action btn-primary">Ver Resultados</button>
 {%endif%}
 
+
+
 <script>
 	function actualizar_causa(act){
 		if (act == 'aceptar'){
 			$("#id_idcausa").val({{causa.id}});
-			$.ajax({
-				url: '/causa/aceptar/',
-				type: 'POST',
-				data: $("#formpago").serialize(),
-				success: function(data){
-					alert(data);
-					$('#modal-id').modal('hide');
-					$("form[name='filtro_estado']").submit();
-				}
-			});
-			
+			$("#formpago").submit();
 		}else{
 
 			var url = '/causa/{{causa.id}}/'+act;
@@ -51,7 +43,7 @@
 				}
 				else{
 					alert(data);
-					$('#modal-id').modal('hide');
+					$("button[id='cerrar']").click();
 					$("form[name='filtro_estado']").submit();
 				}
 			});
@@ -115,10 +107,7 @@
 
 		$("button[id='editar-causa']").click(function(e){
 			e.preventDefault();
-			var url = '/causa/{{causa.id}}/editar';
-			$("#detalle_causa").load(url);
-			url = '/causa/{{causa.id}}/editar/opciones';
-			$("#opciones_causa").load(url);
+			alert('editar causa!');
 		});
 
 		$("button[id='resultados-causa']").click(function(event) {
