--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,28 +1,31 @@
- {% extends "base_nonav.html" %}
+ {% extends "base.html" %}
 {% block title %}Reestablecer Contrase&ntilde;a | SIJ{% endblock title %}
 
 {% block content %}
 <div class="row">
-    <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
-        <img src="/media/images/logo-SIJ.png" alt="" style="width: 70%; margin-left:15%; margin-bottom: 30px;" >
-        <div class="row">
-            <h3 class="text-center">Reestablecer Contrase&ntilde;a</h3>
+    <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-xs-12">
+        <div class="jumbotron">
+            <h2 class="text-center">Reestablecer Contrase&ntilde;a</h2>
+            <br>
             <form action="" method="post" class="form-horizontal" role="form">
                 {% csrf_token %}
                 {% if validlink %}   
                     <div class="form-group">
-                        <div class="col-sm-12 col-xs-12 col-md-8 col-md-offset-2">
-                            <input type="password" name="new_password1" id="new_password1" class="form-control input-lg" title="" placeholder="Contraseña">
+                        <label for="new_password1" class="control-label col-sm-5">Contrase&ntilde;a</label>
+                        <div class="col-sm-7">
+                            <input type="password" name="new_password1" id="new_password1" class="form-control" title="">
                         </div>
                         <div class="col-sm-5 col-sm-offset-7">{{ form.new_password1.errors }}</div>
                     </div>
                     <div class="form-group">
-                        <div class="col-sm-12 col-xs-12 col-md-8 col-md-offset-2">
-                            <input type="password" name="new_password2" id="new_password2" class="form-control input-lg" required="required" title="" placeholder="Repetir contraseña">
+                        <label for="new_password2" class="control-label col-sm-5">Repetir Contrase&ntilde;a</label>
+                        <div class="col-sm-7">
+                            <input type="password" name="new_password2" id="new_password2" class="form-control" required="required" title="">
                         </div>
                         <div class="co-sm-5 co-sm-offset-7">{{ form.new_password2.errors }}</div>
                     </div>
-                    <button type="submit" class="btn btn-action btn-primary btn-block">Guardar</button>
+                    <br>
+                    <button type="submit" class="btn btn-action btn-primary pull-right">Guardar</button>
                 {% else %}
                     <div class="alert alert-danger">
                         <h4>Error al reestablecer contrase&ntilde;a</h4>
