--- a/templates/home/tribunales_receptor.html
+++ b/templates/home/tribunales_receptor.html
@@ -73,14 +73,13 @@ $(document).ready(function(){
 			}
 			else{
 				var url = "/jurisdiccion/" + $(this).val() + "/tribunales/";
-				$("select#id_tribunal").load(url);
-				// var options_t = $("select#id_tribunal").html();
-				// var sinop1 = "<option value='-2'>Todos</option>";
-				// options_t = sinop1 + options_t;
-				// $("select#id_tribunal").html(options_t);
-				$("select#id_tribunal option:first").attr('selected', 'selected');
-				$("select#id_tribunal").attr('disabled',false);
-
+				$("select#id_tribunal").load(url,function(){
+					$("select#id_tribunal option[value=0]").remove();
+					$("select#id_tribunal").prepend("<option value='-100'>Todos</option>");
+					$("select#id_tribunal").prepend("<option value='0'>Seleccione un tribunal</option>");
+					$("select#id_tribunal option:first").attr('selected', 'selected');
+					$("select#id_tribunal").attr('disabled',false);
+				});
 			}
 		});
 
