--- a/templates/causas/opciones_causa.html
+++ b/templates/causas/opciones_causa.html
@@ -1,4 +1,4 @@
-<button type="button" id="cerrar" class="btn btn-action btn-default hidden-xs" data-dismiss="modal">Cerrar</button>
+<button type="button" id="cerrar" class="btn btn-action btn-default pull-left hidden-xs" data-dismiss="modal">Cerrar</button>
 {% if rechazar%}
 <a type="button" href="javascript:actualizar_causa('rechazar');" id="rechazar-causa" class="btn btn-action btn-danger">Rechazar</a>
 {%endif%}
