--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,19 +1,15 @@
-{% extends "base.html" %}
+{% extends "base_app.html" %}
 {% load i18n %}
 {% block title %}Cambiar Contrase&ntilde;a Exitoso | SIJ{% endblock %}
 
 {% block content %}
 <div class="row">
-	<div class="col-md-8 col-md-offset-2">
-		<div class="jumbotron">
-			<h2 class="text-center">{% trans 'Password change successful' %}</h2>
+	<div class="col-sm-12 col-md-8 col-md-offset-2 col-xs-12">
+		<h2 class="text-center">{% trans 'Password change successful' %}</h2>
 
-			<div class="alert alert-success">
-				{% trans 'Your password was changed.' %}
-			</div>
-
-
-		</div>
+		<div class="alert alert-success">
+			{% trans 'Your password was changed.' %}
+		</div>		
 	</div>
 </div>
 
